--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -1086,6 +1086,19 @@
                                 android:text="Uploaded W-9 Form"
                                 android:textColor="@color/primary_color"
                                 android:textSize="@dimen/_10ssp" />
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                >
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/_1sdp"
+                                android:fontFamily="@font/opensans_regular"
+                                android:text="Uploaded on "
+                                android:textColor="@color/dark_grey"
+                                android:textSize="@dimen/_8ssp" />
 
                             <TextView
                                 android:id="@+id/w9FormUpdatedOnTV"
@@ -1095,6 +1108,7 @@
                                 android:text=""
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_8ssp" />
+                            </LinearLayout>
 
                         </LinearLayout>
 
