--- a/app/src/main/res/layout/business_types_bottom_dialog.xml
+++ b/app/src/main/res/layout/business_types_bottom_dialog.xml
@@ -82,6 +82,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/searchLL"
         android:layout_marginTop="@dimen/_20sdp"
+        android:scrollbars="vertical"
         android:visibility="visible" />
 
     <TextView
