--- a/app/src/main/res/layout/activity_edit_phone.xml
+++ b/app/src/main/res/layout/activity_edit_phone.xml
@@ -12,7 +12,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/editPhoneSV"
         android:layout_width="match_parent"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_height="match_parent">
 
         <LinearLayout
