--- a/app/src/main/res/layout/activity_withdraw_payment_methods.xml
+++ b/app/src/main/res/layout/activity_withdraw_payment_methods.xml
@@ -22,6 +22,11 @@
         android:visibility="gone" />
 
     <include
+        android:id="@+id/addbpayment"
+        layout="@layout/addpayment_method"
+        android:visibility="gone" />
+
+    <include
         android:id="@+id/withdrawpay"
         layout="@layout/withdraw_pay_method"
         android:visibility="gone" />
