--- a/app/src/main/res/layout/buy_token_order_review.xml
+++ b/app/src/main/res/layout/buy_token_order_review.xml
@@ -84,6 +84,7 @@
                 android:layout_marginRight="@dimen/_5sdp"
                 android:layout_weight="0.7"
                 android:fontFamily="@font/opensans_semibold"
+                android:gravity="right"
                 android:singleLine="true"
                 android:text="Bank of America"
                 android:textColor="@color/primary_black"
@@ -95,6 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.3"
                 android:fontFamily="@font/opensans_semibold"
+                android:gravity="right"
                 android:singleLine="true"
                 android:text="••••5359"
                 android:textColor="@color/primary_black"
